[gd_scene load_steps=15 format=3 uid="uid://b3cp1f0rtwjh"]

[ext_resource type="Script" uid="uid://0gccktbcfwmh" path="res://PANEL-MANAGER.gd" id="1_0xm2m"]
[ext_resource type="ButtonGroup" uid="uid://brhgx3wrnk6jb" path="res://main-bg.tres" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cb1nu3t8ji7x5" path="res://Display-control.gd" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://bha2myasx0k13" path="res://mouse.png" id="4_4c57u"]
[ext_resource type="Script" uid="uid://qm0l5etxhexg" path="res://mouse_settings.gd" id="4_lquwl"]
[ext_resource type="Script" uid="uid://c67jtsbqle46e" path="res://advance-display.gd" id="4_ycdy4"]
[ext_resource type="Script" uid="uid://dvspevb6kb014" path="res://keyboard_settings.gd" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://tmlwbfem5j6s" path="res://keyboard.png" id="6_efxa6"]
[ext_resource type="Texture2D" uid="uid://b0slo8x0skxfr" path="res://gamepad.png" id="8_dg77c"]
[ext_resource type="Script" uid="uid://bb4m16qmy5px1" path="res://gamepad_settings.gd" id="9_ycdy4"]
[ext_resource type="Texture2D" uid="uid://b3jvvjgg7putc" path="res://input-touchpad-symbolic.png" id="10_dg77c"]
[ext_resource type="Script" uid="uid://ckhncpy1l6s0h" path="res://btn_touchpad.gd" id="10_efxa6"]
[ext_resource type="Script" uid="uid://clwtdaqha7svm" path="res://appv3.gd" id="13_w48qg"]
[ext_resource type="Script" uid="uid://bn463xe77ei7k" path="res://default_apps.gd" id="14_w48qg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="main-panel" type="PanelContainer" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 1102.0
offset_bottom = 598.0

[node name="ColorRect" type="ColorRect" parent="main-panel"]
layout_mode = 2
color = Color(0.0305, 0.031475, 0.05, 1)

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_0xm2m")

[node name="HBoxContainer" type="HBoxContainer" parent="main-panel/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="settings-panel-margin" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 0

[node name="settings_panel" type="PanelContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin"]
modulate = Color(0.611765, 0.631373, 1, 1)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="display" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")
text = "Display
"

[node name="input" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")
text = "Inputs
"

[node name="Apps" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")
text = "Apps
"

[node name="Update" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")
text = "Update "

[node name="personalization" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")
text = "personalization"

[node name="Button6" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")

[node name="Button7" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")

[node name="Button8" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")

[node name="Button9" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")

[node name="Button10" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/settings-panel-margin/settings_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = ExtResource("1_ig7tw")

[node name="Display" type="PanelContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.611765, 0.631373, 1, 1)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "DISPLAY"
horizontal_alignment = 2

[node name="Control" type="Control" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer"]
layout_mode = 2
script = ExtResource("3_1bvp3")

[node name="resolution" type="Control" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control"]
layout_mode = 1
anchor_left = 0.286836
anchor_top = 0.374016
anchor_right = 0.286836
anchor_bottom = 0.374016
offset_left = -74.5
offset_top = -17.0
offset_right = 74.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/resolution"]
layout_mode = 0
offset_right = 306.0
offset_bottom = 28.0

[node name="text" type="Label" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/resolution/HBoxContainer"]
layout_mode = 2
text = "resolution:"

[node name="ResolutionDropdown" type="OptionButton" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/resolution/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="display" type="Control" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control"]
layout_mode = 1
anchor_left = 0.291609
anchor_top = 0.251968
anchor_right = 0.291609
anchor_bottom = 0.251968
offset_left = -74.5
offset_top = -17.0
offset_right = 74.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/display"]
layout_mode = 0
offset_right = 306.0
offset_bottom = 28.0

[node name="text" type="Label" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/display/HBoxContainer"]
layout_mode = 2
text = "Display:"

[node name="MonitorDropdown" type="OptionButton" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/display/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -242.0
offset_right = 242.0
offset_bottom = 23.0
grow_horizontal = 2
text = "here are some   basic Display settings chose Your display and resolution"
horizontal_alignment = 1

[node name="all settings" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -31.0
offset_right = 99.0
grow_horizontal = 2
grow_vertical = 0
text = "Advance display settings"
script = ExtResource("4_ycdy4")

[node name="Inputs" type="PanelContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.611765, 0.631373, 1, 1)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.701991, 0.717632, 0.910109, 1)
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "INPUTS"
horizontal_alignment = 2

[node name="Control" type="Control" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs"]
layout_mode = 2

[node name="btn_Mouse" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0532609
anchor_top = 0.0983936
anchor_right = 0.0532609
anchor_bottom = 0.0983936
offset_right = 264.0
offset_bottom = 264.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 1
icon = ExtResource("4_4c57u")
script = ExtResource("4_lquwl")
metadata/_edit_use_anchors_ = true

[node name="btn_keyboard" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.254348
anchor_top = 0.100402
anchor_right = 0.254348
anchor_bottom = 0.100402
offset_right = 264.0
offset_bottom = 264.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 1
icon = ExtResource("6_efxa6")
script = ExtResource("5_7mycd")
metadata/_edit_use_anchors_ = true

[node name="btn_gamepad" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.454348
anchor_top = 0.100402
anchor_right = 0.454348
anchor_bottom = 0.100402
offset_right = 264.0
offset_bottom = 264.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 1
icon = ExtResource("8_dg77c")
script = ExtResource("9_ycdy4")
metadata/_edit_use_anchors_ = true

[node name="btn_touchpad" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.671739
anchor_top = 0.100402
anchor_right = 0.671739
anchor_bottom = 0.100402
offset_right = 264.0
offset_bottom = 264.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 1
icon = ExtResource("10_dg77c")
icon_alignment = 1
script = ExtResource("10_efxa6")
metadata/_edit_use_anchors_ = true

[node name="APPS" type="PanelContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.611765, 0.631373, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/MarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "APPS"
horizontal_alignment = 2

[node name="Control" type="Control" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS"]
layout_mode = 2
mouse_filter = 1
script = ExtResource("13_w48qg")

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 68.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control/MarginContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InfoText" type="RichTextLabel" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
metadata/_edit_use_anchors_ = true

[node name="default_apps" type="Button" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.036
anchor_right = 0.037
anchor_bottom = 0.036
offset_left = -0.0400009
offset_top = 0.0719986
offset_right = 135.96
offset_bottom = 31.072
tooltip_text = "Set your default apps like browser mail etc"
text = "Set Default Apps"
script = ExtResource("14_w48qg")

[node name="info_label" type="Label" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.793478
anchor_top = 0.191767
anchor_right = 0.794565
anchor_bottom = 0.191767
offset_left = -127.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "App Information"
metadata/_edit_use_anchors_ = true

[node name="info_label2" type="Label" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.181522
anchor_top = 0.0813253
anchor_right = 0.553261
anchor_bottom = 0.185743
offset_left = -127.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "manage your apps here click on app to show informations
click unstall to unstall them"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="UPDATE" type="PanelContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.61, 0.6295, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/UPDATE"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/UPDATE/MarginContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0.701991, 0.717632, 0.910109, 1)
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "UPDATE"
horizontal_alignment = 2

[node name="PERSONALIZATION" type="PanelContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.61, 0.6295, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/PERSONALIZATION"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="main-panel/ColorRect/MarginContainer/HBoxContainer/PERSONALIZATION/MarginContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0.701991, 0.717632, 0.910109, 1)
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
text = "PERSONALIZATION"
horizontal_alignment = 2

[connection signal="pressed" from="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/all settings" to="main-panel/ColorRect/MarginContainer/HBoxContainer/Display/MarginContainer/Control/all settings" method="_on_pressed"]
[connection signal="pressed" from="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_Mouse" to="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_Mouse" method="_on_pressed"]
[connection signal="pressed" from="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_keyboard" to="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_keyboard" method="_on_pressed"]
[connection signal="pressed" from="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_gamepad" to="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_gamepad" method="_on_pressed"]
[connection signal="pressed" from="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_touchpad" to="main-panel/ColorRect/MarginContainer/HBoxContainer/Inputs/Control/btn_touchpad" method="_on_pressed"]
[connection signal="pressed" from="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control/default_apps" to="main-panel/ColorRect/MarginContainer/HBoxContainer/APPS/Control/default_apps" method="_on_pressed"]
